samples/_failures_safe/1761314972_666cac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13442662.c: In function ‘main’:
./samples/SAFE/__tmp_13442662.c:136:5: error: expected expression at end of input
  136 |     read_matrix(&a,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_13442662.c:136:5: error: expected declaration or statement at end of input
